--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+body {
 	font-family: "League Spartan", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
