--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,22 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+nav {
+	position: absolute;
+	left: -100vw;
+	transition: all 0.5s ease-in-out;
+}
+
+nav.open {
+	left: 0;
+	@apply bg-white shadow-lg lg:shadow-none lg:bg-transparent;
+}
+
+@media (min-width: 1024px) {
+	nav {
+		position: relative;
+		top: 0;
+		left: 0;
+	}
+}
